--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8741441060689041"
+       crossorigin="anonymous"></script>
+    <!-- aA -->
+    <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-8741441060689041"
+       data-ad-slot="9150858050"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+    <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RetailHub - Shop Smart, Live Better</title>
